# AUV-Controller

./: .gitmodules  CMakeLists.txt  controller.cpp  controller.h
ThrusterPlugin/: thrusterPlugin.cpp  thrusterPlugin.h
